--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2024"
 [dependencies]
 bevy = { version = "0.16", features = ["dynamic_linking"] }
 bevy_enhanced_input = "0.12.0"
+getrandom = { version="0.3.3", features = ["wasm_js"] }
 log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
+rand = "0.9.1"
 
 [profile.dev]
 opt-level = 1
