--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,3 +1,7 @@
+# From https://bevy-cheatbook.github.io/platforms/wasm/size-opt.html#link-time-optimization-lto
+[profile.release]
+lto = "thin"
+
 [target.x86_64-unknown-linux-gnu]
 linker = "clang"
 rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]
