--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ bevy_enhanced_input = "0.12.0"
 getrandom = { version="0.3.3", features = ["wasm_js"] }
 log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
 rand = "0.9.1"
+avian2d = "0.3"
 
 [profile.dev]
 opt-level = 1
